<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/orderItemItemImage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/honey_green_milk_tea"></ImageView>

            <TextView
                android:id="@+id/orderItemItemTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:text="Green Tea"
                android:textSize="30dp"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/orderItemItemPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="0dp"
                    android:text="$4.25"
                    android:textSize="15dp"></TextView>

                <TextView
                    android:id="@+id/item_seperator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="10dp"
                    android:text="|"
                    android:textSize="15dp"></TextView>


                <TextView
                    android:id="@+id/orderItemItemCaffeine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:text="255 mg of caffeine"
                    android:textSize="15dp"></TextView>

            </LinearLayout>

            <!--            <TextView-->
            <!--                android:id="@+id/ice_label"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:text="Ice"-->
            <!--                android:layout_marginTop="20dp"-->
            <!--                android:layout_marginLeft="20dp"-->
            <!--                android:textSize="25dp">-->
            <!--            </TextView>-->

            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:orientation="horizontal">-->

            <!--                <CheckBox-->
            <!--                    android:id="@+id/ice0CheckBox"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="0%"-->
            <!--                    android:layout_marginTop="16dp"-->
            <!--                    android:layout_marginLeft="20dp"-->
            <!--                    android:layout_marginRight="20dp"-->
            <!--                    android:textSize="18sp" />-->
            <!--                <CheckBox-->
            <!--                    android:id="@+id/ice25CheckBox"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="25%"-->
            <!--                    android:layout_marginTop="16dp"-->
            <!--                    android:layout_marginRight="20dp"-->
            <!--                    android:textSize="18sp" />-->
            <!--                <CheckBox-->
            <!--                    android:id="@+id/ice50CheckBox"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="50%"-->
            <!--                    android:layout_marginTop="16dp"-->
            <!--                    android:layout_marginRight="20dp"-->

            <!--                    android:textSize="18sp" />-->
            <!--                <CheckBox-->
            <!--                    android:id="@+id/ice100CheckBox"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="100%"-->
            <!--                    android:layout_marginTop="16dp"-->
            <!--                    android:layout_marginRight="20dp"-->

            <!--                    android:textSize="18sp" />-->

            <!--            </LinearLayout>-->

            <!--            <TextView-->
            <!--                android:id="@+id/item_sugar"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:text="Sugar"-->
            <!--                android:layout_marginTop="20dp"-->
            <!--                android:layout_marginLeft="20dp"-->
            <!--                android:textSize="25dp">-->
            <!--            </TextView>-->

            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:orientation="horizontal">-->

            <!--                <CheckBox-->
            <!--                    android:id="@+id/sugar0CheckBox"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="0%"-->
            <!--                    android:layout_marginTop="16dp"-->
            <!--                    android:layout_marginLeft="20dp"-->
            <!--                    android:layout_marginRight="20dp"-->
            <!--                    android:textSize="18sp" />-->
            <!--                <CheckBox-->
            <!--                    android:id="@+id/sugar25CheckBox"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="25%"-->
            <!--                    android:layout_marginTop="16dp"-->
            <!--                    android:layout_marginRight="20dp"-->
            <!--                    android:textSize="18sp" />-->
            <!--                <CheckBox-->
            <!--                    android:id="@+id/sugar50CheckBox"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="50%"-->
            <!--                    android:layout_marginTop="16dp"-->
            <!--                    android:layout_marginRight="20dp"-->

            <!--                    android:textSize="18sp" />-->
            <!--                <CheckBox-->
            <!--                    android:id="@+id/sugar100CheckBox"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="100%"-->
            <!--                    android:layout_marginTop="16dp"-->
            <!--                    android:layout_marginRight="20dp"-->

            <!--                    android:textSize="18sp" />-->

            <!--            </LinearLayout>-->

            <!--            <TextView-->
            <!--                android:id="@+id/item_toppings"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:text="Topping"-->
            <!--                android:layout_marginTop="20dp"-->
            <!--                android:layout_marginLeft="20dp"-->
            <!--                android:textSize="25dp">-->
            <!--            </TextView>-->

            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:orientation="horizontal">-->

            <!--                <CheckBox-->
            <!--                    android:id="@+id/bobaCheckBox"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="Boba"-->
            <!--                    android:layout_marginTop="16dp"-->
            <!--                    android:layout_marginLeft="20dp"-->
            <!--                    android:layout_marginRight="20dp"-->
            <!--                    android:textSize="18sp" />-->
            <!--                <CheckBox-->
            <!--                    android:id="@+id/jellyCheckBox"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="Jelly"-->
            <!--                    android:layout_marginTop="16dp"-->
            <!--                    android:layout_marginRight="20dp"-->
            <!--                    android:textSize="18sp" />-->
            <!--                <CheckBox-->
            <!--                    android:id="@+id/miniBobaCheckBox"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="Mini Boba"-->
            <!--                    android:layout_marginTop="16dp"-->
            <!--                    android:layout_marginRight="20dp"-->

            <!--                    android:textSize="18sp" />-->

            <!--            </LinearLayout>-->

        </LinearLayout>

        <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
            android:id="@+id/orderItemCountStepper"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="90dp"
            />


        
        <Button
            android:id="@+id/orderItemAddToCart"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:text="Add to Cart"
            android:layout_centerHorizontal="true">
        </Button>

    </RelativeLayout>


</LinearLayout>