...

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/TESTinvisibleRedMarker_PotOfChang"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:visibility="invisible">
        </Button>
...

<!--                </ImageView>-->

            </LinearLayout>

            <Button
                android:id="@+id/view_cafe_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:text="View Cafe">
            </Button>
        </LinearLayout>
...
