...
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <View
            android:id="@+id/userItemRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </View>

        <LinearLayout
            android:layout_width="match_parent"
...
